--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.wbb.calculator">
 
+    <uses-sdk
+        android:minSdkVersion="26">
+
+    </uses-sdk>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -16,7 +20,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".TransActivity"></activity>
+        <activity android:name=".TransActivity" />
+        <activity android:name=".AfterActivity"></activity>
     </application>
 
 </manifest>
